fix:the overflow of image from cards

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html,body{
     background-color: antiquewhite;
     border:1px solid ;
     border-radius: 40px;
+    overflow: hidden;/*to define the border property which was originally specified so that image doesn't overflow from cards"*/
 }
 
 #card1{
@@ -58,5 +59,5 @@ html,body{
 img{
     height: 100%;
     width:100%;
-    object-fit:cover;
+    object-fit:cover;/*to cover the image inside the card component*/
 }
